News UAT/force-app/main/default/objects/Status_Report__c/fields/Accomplishments_this_Period__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments_this_Period__c</fullName>
    <description>Describes tasks completed during the past week</description>
    <inlineHelpText>Describes tasks completed during the past week</inlineHelpText>
    <label>Accomplishments this Period</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>