News UAT/force-app/main/default/objects/Status_Report__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Budget Status Indicator</description>
    <formula>IMAGE( 
CASE( Budget_Status__c , 
&quot;On Schedule&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Potential Risk&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;budget status indicator&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget</label>
    <type>Text</type>
</CustomField>