News UAT/force-app/main/default/objects/Status_Report__c/fields/Client_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Client_Distribution_List__c</fullName>
    <description>List of client team members to send the status report</description>
    <label>Client Distribution List</label>
    <type>TextArea</type>
</CustomField>