News UAT/force-app/main/default/objects/Status_Report__c/fields/Cust_Sat__c.field-meta.xml
<CustomField>
    <fullName>Cust_Sat__c</fullName>
    <description>Customer Satisfaction Indicator</description>
    <formula>IMAGE( 
CASE(   Customer_Satisfaction__c , 
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;cust sat indicator&quot;)</formula>
    <label>Cust Sat</label>
    <type>Text</type>
</CustomField>