News UAT/force-app/main/default/objects/Status_Report__c/fields/Customer_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction__c</fullName>
    <description>Rate the level of Customer Satisfaction as perceived by the Project Executive Sponsor</description>
    <inlineHelpText>Rate the level of Customer Satisfaction as perceived by the Project Executive Sponsor</inlineHelpText>
    <label>Customer Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>