News UAT/force-app/main/default/objects/Status_Report__c/fields/Detail_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Detail_Due_Date__c</fullName>
    <description>Date of which all status report details are due so the Project Manager can process the input.</description>
    <label>Detail Due Date</label>
    <type>Date</type>
</CustomField>