News UAT/force-app/main/default/objects/Status_Report__c/fields/Effort_Burn__c.field-meta.xml
<CustomField>
    <fullName>Effort_Burn__c</fullName>
    <label>Effort Burn</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>