News UAT/force-app/main/default/objects/Status_Report__c/fields/Items_for_Management_Attn__c.field-meta.xml
<CustomField>
    <fullName>Items_for_Management_Attn__c</fullName>
    <description>Indicate high priority items for management&#39;s consideration here</description>
    <inlineHelpText>Indicate high priority items for management&#39;s consideration here</inlineHelpText>
    <label>Items for Management Attn</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>