News UAT/force-app/main/default/objects/Status_Report__c/fields/New_Requirements__c.field-meta.xml
<CustomField>
    <fullName>New_Requirements__c</fullName>
    <label>New Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>