News UAT/force-app/main/default/objects/Status_Report__c/fields/Overall__c.field-meta.xml
<CustomField>
    <fullName>Overall__c</fullName>
    <description>Overall Status Indicator</description>
    <formula>IMAGE( 
CASE(  Overall_Status__c , 
&quot;On Schedule&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Potential Risk&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;overall status indicator&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall</label>
    <type>Text</type>
</CustomField>