News UAT/force-app/main/default/objects/Status_Report__c/fields/PHC_Name__c.field-meta.xml
<CustomField>
    <fullName>PHC_Name__c</fullName>
    <description>Project Health Check Name</description>
    <formula>Project_Overview__r.Name +  &quot;-&quot;+ TEXT(Status_Date__c )+ &quot;-Post Sales Health Check&quot;</formula>
    <label>PHC Name</label>
    <type>Text</type>
</CustomField>