News UAT/force-app/main/default/objects/Status_Report__c/fields/Planned_but_Not_Accomplished__c.field-meta.xml
<CustomField>
    <fullName>Planned_but_Not_Accomplished__c</fullName>
    <description>Describes tasks not completed but were planned to be done</description>
    <inlineHelpText>Describes tasks not completed but were planned to be done</inlineHelpText>
    <label>Planned, but Not Accomplished</label>
    <length>2550</length>
    <type>LongTextArea</type>
</CustomField>