News UAT/force-app/main/default/objects/Status_Report__c/fields/Planned_for_Next_Period__c.field-meta.xml
<CustomField>
    <fullName>Planned_for_Next_Period__c</fullName>
    <description>Describes tasks that are planned to be undertaken next week</description>
    <inlineHelpText>Describes tasks that are planned to be undertaken next week</inlineHelpText>
    <label>Planned for Next Period</label>
    <length>2550</length>
    <type>LongTextArea</type>
</CustomField>