News UAT/force-app/main/default/objects/Status_Report__c/fields/Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>Project_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Project</description>
    <label>Project Overview</label>
    <referenceTo>Project_Overview__c</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>R00N80000002QnvqEAC</relationshipName>
    <type>Lookup</type>
</CustomField>