News UAT/force-app/main/default/objects/Status_Report__c/fields/Project_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Project_Schedule__c</fullName>
    <description>G/Y/R status re project schedule</description>
    <inlineHelpText>PM: How are we progressing vs. the agreed upon project timeline?</inlineHelpText>
    <label>Project Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>