News UAT/force-app/main/default/objects/Status_Report__c/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <description>G/Y/R status re project scope</description>
    <inlineHelpText>PM: How close are we to the latest approved scope (i.e. original SOW + latest CO&#39;s)</inlineHelpText>
    <label>Project Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>