News UAT/force-app/main/default/objects/Status_Report__c/fields/Requirement_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Funnel__c</fullName>
    <label>Requirement Funnel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>