News UAT/force-app/main/default/objects/Status_Report__c/fields/Resource_Burn__c.field-meta.xml
<CustomField>
    <fullName>Resource_Burn__c</fullName>
    <label>Resource Burn</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>