News UAT/force-app/main/default/objects/Status_Report__c/fields/Salesforce_com_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_com_Distribution_List__c</fullName>
    <description>List of Salesforce.com team members to send the status report</description>
    <label>Salesforce.com Distribution List</label>
    <type>TextArea</type>
</CustomField>