News UAT/force-app/main/default/objects/Status_Report__c/fields/Sched__c.field-meta.xml
<CustomField>
    <fullName>Sched__c</fullName>
    <description>Project Schedule Indicator</description>
    <formula>IMAGE( 
CASE(   Project_Schedule__c  , 
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;sched status indicator&quot;)</formula>
    <label>Sched</label>
    <type>Text</type>
</CustomField>