News UAT/force-app/main/default/objects/Status_Report__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Project Scope Indicator</description>
    <formula>IMAGE( 
CASE(   Project_Scope__c  , 
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;scope indicator&quot;)</formula>
    <label>Scope</label>
    <type>Text</type>
</CustomField>