News UAT/force-app/main/default/objects/Status_Report__c/fields/Sprint_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Forecast__c</fullName>
    <label>Sprint Forecast</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>