News UAT/force-app/main/default/objects/Status_Report__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <description>Date of status report</description>
    <label>Status Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>