News UAT/force-app/main/default/objects/Status_Report__c/fields/Stream_Progress__c.field-meta.xml
<CustomField>
    <fullName>Stream_Progress__c</fullName>
    <label>Stream Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>