News UAT/force-app/main/default/objects/Status_Report__c/fields/Summary_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Summary_Project_Status__c</fullName>
    <description>Short summary of where the project is currently</description>
    <inlineHelpText>Write a short summary of where the project is currently - e.g. &quot;BPR completed successfully, completed KT with TA to start preparing for Technical Design sessions.&quot;</inlineHelpText>
    <label>Summary - Project Status</label>
    <type>TextArea</type>
</CustomField>