News UAT/force-app/main/default/objects/Status_Report__c/recordTypes/Centralized.recordType-meta.xml
<RecordType>
    <fullName>Centralized</fullName>
    <active>true</active>
    <description>Enter status progress in a single form</description>
    <label>Centralized</label>
</RecordType>