News UAT/force-app/main/default/objects/Status_Report__c/recordTypes/Distributed.recordType-meta.xml
<RecordType>
    <fullName>Distributed</fullName>
    <active>true</active>
    <description>Enable Track Owners to submit project status feedback.</description>
    <label>Distributed</label>
</RecordType>